periodic health check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ proxy.redis.port=${REDIS_PORT:6379}
 proxy.redis.key=${REDIS_KEY:http_endpoint}
 proxy.reroute.timeout=${REROUTE_TIMEOUT_SEC:5}
 proxy.reroute.cache.maxage = ${CACHE_MAX_AGE:60}
-
+proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
+proxy.healthcheck.timeout= ${TIMEOUT:5}
 #QUARKUS
 quarkus.resteasy.path=${API_BASE_PATH:api/v1}
 quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
