--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ proxy.redis.key=${REDIS_KEY:http_endpoint}
 proxy.reroute.timeout=${REROUTE_TIMEOUT_SEC:5}
 proxy.reroute.cache.maxage = ${CACHE_MAX_AGE:60}
 proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
-proxy.healthcheck.timeout= ${TIMEOUT:5}
+proxy.healthcheck.timeout= ${TIMEOUT:3}
+proxy.healthcheck.enable= ${HEALTHCHECK:true}
+
+
 #QUARKUS
 quarkus.resteasy.path=${API_BASE_PATH:api/v1}
 quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
 quarkus.log.level=INFO
 quarkus.redis.max-pool-waiting=32
 quarkus.redis.max-pool-size=8
+%dev.quarkus.log.level=DEBUG
