--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ proxy.reroute.timeout=${REROUTE_TIMEOUT_SEC:5}
 proxy.reroute.cache.maxage = ${CACHE_MAX_AGE:60}
 proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
 proxy.healthcheck.timeout= ${TIMEOUT:3}
-proxy.healthcheck.enable= ${HEALTHCHECK:true}
+proxy.healthcheck.enable= ${HEALTHCHECK:false}
 
 
 #QUARKUS
@@ -16,3 +16,4 @@ quarkus.log.level=INFO
 quarkus.redis.max-pool-waiting=32
 quarkus.redis.max-pool-size=8
 %dev.quarkus.log.level=DEBUG
+%test.quarkus.http.port=8027
