--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -16,6 +16,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - HEALTHCHECK=true
     depends_on:
       - redis
     networks:
@@ -42,11 +43,11 @@ services:
       - MONGO_DB_HOST=mongodb
       - MONGO_DB=tracksdb
       - MONGO_DB_PORT=27017
-      - PROXY_PORT=8080
-      - PROXY_HOST=proxy
+      - PROXY_PORT=8027
+      - PROXY_HOST=localhost
       - PROXY_ROOT_PATH=/api/v1
-      - HOST=tracks
-      - EXTERNAL_PORT=8000
+      - HOST=localhost
+      - EXTERNAL_PORT=8902
     depends_on:
       - mongodb
       - proxy
