fix error rfesponse

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,12 @@ proxy.healthcheck.enable= ${HEALTHCHECK:false}
 #QUARKUS
 quarkus.resteasy.path=${API_BASE_PATH:api/v1}
 quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
-quarkus.log.level=INFO
+quarkus.log.level=${LOG_LEVEL:INFO}
 quarkus.redis.max-pool-waiting=32
 quarkus.redis.max-pool-size=8
+
+#DEV
 %dev.quarkus.log.level=DEBUG
+
+#TEST
 %test.quarkus.http.port=8027
