corrected response filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ proxy.reroute.cache.maxage = ${CACHE_MAX_AGE:60}
 proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
 proxy.healthcheck.timeout= ${TIMEOUT:3}
 proxy.healthcheck.enable= ${HEALTHCHECK:false}
+proxy.basepath=${API_BASE_PATH:api/v1}
 
 
 #QUARKUS
