added port, eliminated runner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ proxy.reroute.cache.maxage = ${CACHE_MAX_AGE:60}
 proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
 proxy.healthcheck.timeout= ${TIMEOUT:3}
 proxy.healthcheck.enable= ${HEALTHCHECK:false}
-proxy.basepath=${API_BASE_PATH:api/v1}
 
 
 #QUARKUS
@@ -16,6 +15,7 @@ quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
 quarkus.log.level=${LOG_LEVEL:INFO}
 quarkus.redis.max-pool-waiting=32
 quarkus.redis.max-pool-size=8
+quarkus.http.port=${PORT:8080}
 
 #DEV
 %dev.quarkus.log.level=DEBUG
