added custom service discovery

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,11 @@ proxy.healthcheck.enable= ${HEALTHCHECK:false}
 #QUARKUS
 quarkus.resteasy.path=${API_BASE_PATH:api/v1}
 quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
-quarkus.log.level=${LOG_LEVEL:INFO}
+quarkus.log.level=${LOG_LEVEL:TRACE}
 quarkus.redis.max-pool-waiting=32
 quarkus.redis.max-pool-size=8
 quarkus.http.port=${PORT:8080}
+%dev.proxy.healthcheck.enable=true
 
 #DEV
 %dev.quarkus.log.level=DEBUG
