now it is full reactive. Adjusted root path. Added better cache handling with a cache id that the client can use to retrieve its stuff. If cacheAge is 0, then a reroute with no cache is used.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,8 @@ proxy.healthcheck.heartbeat= ${HEARTBEAT:0/5 * * ? * * *}
 proxy.healthcheck.timeout= ${TIMEOUT:3}
 proxy.healthcheck.enable= ${HEALTHCHECK:false}
 
-
 #QUARKUS
-quarkus.resteasy.path=${API_BASE_PATH:api/v1}
+quarkus.http.root-path=${API_BASE_PATH:/api/v1}
 quarkus.redis.hosts=redis://${REDIS_HOST:localhost}:${REDIS_PORT:6379}
 quarkus.log.level=${LOG_LEVEL:TRACE}
 quarkus.redis.max-pool-waiting=32
